# ChangeLog for schedule

*schedule-v6.0.1:
	Martin Väth <martin at mvath.de>:
	- Use perl-5.12 package versioning
	- Require correct minimal versions of perl and its modules

*schedule-v6.0.0:
	Martin Väth <martin at mvath.de>:
	- Pass to dotted-decimal version format and be more permissive
	- Fix output of error/warning messages
	- Fix behaviour in too early fatal errors

*schedule-5.3:
	Martin Väth <martin at mvath.de>:
	- list: different colors if user = root or $HOSTTEXTSAVE != $HOSTTEXT
	- queue: change default --text

*schedule-5.2:
	Martin Väth <martin at mvath.de>:
	- schedule-tmux: Use SCHEDULE_REMAIN as the default
	- fix regression: repeated cancel can change exit status repeatedly

*schedule-5.1:
	Martin Väth <martin at mvath.de>:
	- Set status line/windows title. Introduce corresponding options:
	- --{no-,}status --{no-,}title --text=...
	- schedule-tmux: support man; error out if unknown command is used
	- schedule-tmux: support --{no-,}remain and make --remain the default
	- schedule-tmux is now a POSIX shell script
	- Provide shell helper "schedule quote"

*schedule-5.0:
	Martin Väth <martin at mvath.de>:
	- Provide schedule-tmux script
	- Provide --alpha, --alpha-ignore, --ignore, --immediate
	- schedule: fix race with --bg run/exec
	- schedule-server: fix bugs in permission handling
	- schedule-server: fix race with --bg/--daemon
	- schedule-server: close server's socket also in case of error exit

*schedule-4.2:
	Martin Väth <martin at mvath.de>:
	- Fix manpage handling

*schedule-4.1:
	Martin Väth <martin at mvath.de>:
	- Fix exit status reporting (regression of schedule-4.0)
	- start/queue: print job address and exit status to stdout unless quiet
	- Split job list arguments
	- Slightly reorganize modules
	- zsh-completion: fix --file

*schedule-4.0:
	Martin Väth <martin at mvath.de>:
	- Split into modules to minimize memory footprint

*schedule-3.1:
	Martin Väth <martin at mvath.de>: