@@ -3,7 +3,7 @@
 # This is part of the schedule project.
 
 require 5.012;
-package ScheduleServer v6.0.1;
+package ScheduleServer v6.0.2;
 
 use strict;
 use warnings;
