@@ -4,7 +4,7 @@
 # This is part of the schedule project.
 
 require 5.012;
-package Schedule::Client::Args v6.0.1;
+package Schedule::Client::Args v6.0.2;
 
 use strict;
 use warnings;
@@ -57,4 +57,4 @@ sub validate_args {
 	1
 }
 
-'EOF'
+1;
