@@ -4,7 +4,7 @@
 # This is part of the schedule project.
 
 require 5.012;
-package Schedule::Client::Clientfuncs v6.0.1;
+package Schedule::Client::Clientfuncs v6.0.2;
 
 use strict;
 use warnings;
@@ -156,4 +156,4 @@ sub client_exit {
 	exit($exitstatus)
 }
 
-'EOF'
+1;
