@@ -4,7 +4,7 @@
 # This is part of the schedule project.
 
 require 5.012;
-package Schedule::Client::Cmd::Parallel v6.0.1;
+package Schedule::Client::Cmd::Parallel v6.0.2;
 
 use strict;
 use warnings;
@@ -71,4 +71,4 @@ sub parallel {
 	1
 }
 
-'EOF'
+1;
