@@ -4,7 +4,7 @@
 # This is part of the schedule project.
 
 require 5.012;
-package Schedule::Client::Cmd::Remove v6.0.1;
+package Schedule::Client::Cmd::Remove v6.0.2;
 
 use strict;
 use warnings;
@@ -46,4 +46,4 @@ sub remove {
 	1
 }
 
-'EOF'
+1;
