@@ -4,7 +4,7 @@
 # This is part of the schedule project.
 
 require 5.012;
-package Schedule::Client::Iterator v6.0.1;
+package Schedule::Client::Iterator v6.0.2;
 
 use strict;
 use warnings;
@@ -241,4 +241,4 @@ sub cond_error {
 	1
 }
 
-'EOF'
+1;
