@@ -4,7 +4,7 @@
 # This is part of the schedule project.
 
 require 5.012;
-package Schedule::Client::Testarg v6.0.1;
+package Schedule::Client::Testarg v6.0.2;
 
 use strict;
 use warnings;
@@ -52,4 +52,4 @@ sub test_args {
 	$ret
 }
 
-'EOF'
+1;
