@@ -4,7 +4,7 @@
 # This is part of the schedule project.
 
 require 5.012;
-package Schedule::Server::Serverman v6.0.1;
+package Schedule::Server::Serverman v6.0.2;
 
 use strict;
 use warnings;
@@ -271,4 +271,4 @@ sub man_server_init {
 	$s->check_version()
 }
 
-'EOF'
+1;
